# bazel-llvm

./: README.md  WORKSPACE
tests/: BUILD.bazel  file_dependency_test.sh  stdlib.cc  stdlib_test.cc
toolchain/: BUILD.tpl  Makevars.tpl  cc_toolchain_config.bzl.tpl  cc_wrapper.sh.tpl  rules.bzl  toolchains.bzl.tpl
toolchain/internal/: configure.bzl  llvm_distributions.bzl  sysroot.bzl
toolchain/tools/: BUILD.bazel  llvm_release_name.py
utils/: llvm_checksums.sh
